# dut-ics-tauri

./: README.md  ics_download.ics  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cli/: command.rs  create.rs  mod.rs  run.rs
src-tauri/src/cli/features/: create.rs  mod.rs  rclone.rs
src-tauri/src/cli/models/: mod.rs
src-tauri/src/cli/utils/: hasher.rs  mod.rs
src-tauri/src/config/: config_env.rs  config_linux.rs  mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/convert/: ics_calendar.rs  mod.rs
src-tauri/src/features/dut_fetch/: auth.rs  config.rs  mod.rs  request.rs  score.rs  test.rs
src-tauri/src/features/pictures/: common.rs  download_images.rs  mod.rs  scrape_images.rs  zip_images.rs
src-tauri/src/features/translate/: translate.rs
src-tauri/src/features/translates/: translate.rs
src-tauri/src/models/: course.rs  mod.rs
src-tauri/src/utils/: mod.rs  parse_date.rs  period_times_dut.rs  read_file.rs
src-tauri/src/video/: mod.rs  read_video.rs  video_manager.rs
src/assets/: index.ts
src/components/: DownloadButton.tsx
src/components/common/: Sidebar.tsx  SidebarItem.tsx  SidebarItemCollapse.tsx  Spinner.tsx  Topbar.tsx  app-sidebar.tsx
src/components/layout/: DutLayout.tsx  MainLayout.tsx  PageWrapper.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  scroll-area.tsx  sidebar.tsx
src/configs/: colorConfigs.ts  configPath.ts  sizeConfigs.ts
src/features/calendar/: IcsCalendarPage.module.css  IcsCalendarPage.tsx
src/features/calendar/components/: SelectAndSaveIcs.module.css  SelectAndSaveIcs.tsx
src/layouts/: AppLayout.module.css  HomePage.tsx
src/pages/Dut/: DutDefault.tsx  SchedulePage.css  SchedulePage.tsx  ScorePage.tsx
src/pages/Dut/components/: AcademicResultsTable.tsx  CourseResultsTable.tsx  CourseTable.tsx  ExamTable.tsx  SemesterList.tsx  removeElement.tsx
src/pages/Dut/hooks/: useSemesters.tsx
src/pages/Dut/utils/: mapRawRowsToCourses.ts  parseAcademicResult.ts  parseCourseResults.ts  parseExamSchedule.ts  parseStudySchedule.ts
src/pages/Picture/components/: DropUrlOverlay.tsx  EmptyHint.tsx  HeaderBar.tsx  ImageCard.tsx  ResultsSection.tsx  UseFullScreenURLDrop.tsx
src/pages/Picture/hooks/: useDownload.tsx  useInstallImages.tsx
src/pages/Picture/pages/: DownloadPicturesPage.tsx
src/pages/test/: TestPage.tsx
src/redux/: store.ts
src/redux/features/: appStateSlice.ts
src/routes/: appRoutes.tsx  config.ts  index.tsx
src/routes/helpers/: generateRoute.tsx
src/types/: Course.ts  Score.ts
src/utils/: selectDiretory.ts
(+19 files in other folders)
