[package]
name = "mintori"
version = "0.1.0"
description = "A Tauri App"
authors = ["mintori"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "calendar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7.1.4"
tauri-plugin-dialog = "2"
clap = "4.5.39"
chrono = "0.4.41"
chrono-tz = "0.10.3"
regex = "1.11.1"
icalendar = "0.16.13"
anyhow = "1.0.98"
dotenv = "0.15.0"
srtlib = "0.2.0"
rust-translate = "0.1.3"
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
